# smartcli-dashboard

./: README.md  pyproject.toml  readme.md  requirement.txt  setup.py
.devcontainer/: devcontainer.json
smartcli.egg-info/: SOURCES.txt
src/smartcli/: main.py
src/smartcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/smartcli/commands/: cleanup.py  gitstatus.py  status.py  summarize.py
